BLE Lab 1 - group 7.cydsn/CortexM0/ARM_GCC_493/Debug/BUILD.log
--------------- Build Started: 05/27/2016 21:37:43 Project: BLE Lab 1, Configuration: ARM GCC 4.9-2015-q1-update Debug ---------------
cydsfit.exe -.appdatapath "C:\Users\boogie\AppData\Local\Cypress Semiconductor\PSoC Creator\3.3" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -p "C:\Users\boogie\Desktop\Summer Term 2016\ble\Cypress BLE Workshop\Workshop Exrecises and Manuals\Template Labs\BLE Lab 1\BLE Lab 1.cydsn\BLE Lab 1.cyprj" -d CY8C4247LQI-BL483 -s "C:\Users\boogie\Desktop\Summer Term 2016\ble\Cypress BLE Workshop\Workshop Exrecises and Manuals\Template Labs\BLE Lab 1\BLE Lab 1.cydsn\Generated_Source\PSoC4" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation ...
Synthesis ...
Place and Route ...
Tech mapping ...
Analog Placement ...
Analog Routing ...
Analog Code Generation ...
Digital Placement ...
Digital Routing ...
Bitstream Generation ...
Static timing analysis ...
API Generation ...
Dependency Generation ...
Clean Temporary Files ...
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -Wno-main -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_493\Debug/main.lst -g -D DEBUG -Wall -ffunction-sections -O0 -ffat-lto-objects -c .\main.c -o .\CortexM0\ARM_GCC_493\Debug\main.o
.\main.c: In function 'main':
.\main.c:58:5: warning: implicit declaration of function 'CyBle_Start' [-Wimplicit-function-declaration]
     CyBle_Start(StackEventHandler);
     ^
.\main.c:61:5: warning: implicit declaration of function 'CyBle_IasRegisterAttrCallback' [-Wimplicit-function-declaration]
     CyBle_IasRegisterAttrCallback(IasEventHandler);
     ^
.\main.c:72:9: warning: implicit declaration of function 'CyBle_ProcessEvents' [-Wimplicit-function-declaration]
         CyBle_ProcessEvents();
         ^
.\main.c: In function 'StackEventHandler':
.\main.c:100:14: error: 'CYBLE_EVT_STACK_ON' undeclared (first use in this function)
         case CYBLE_EVT_STACK_ON:
              ^
.\main.c:100:14: note: each undeclared identifier is reported only once for each function it appears in
.\main.c:101:14: error: 'CYBLE_EVT_GAP_DEVICE_DISCONNECTED' undeclared (first use in this function)
         case CYBLE_EVT_GAP_DEVICE_DISCONNECTED:
              ^
.\main.c:103:13: warning: implicit declaration of function 'CyBle_GappStartAdvertisement' [-Wimplicit-function-declaration]
             CyBle_GappStartAdvertisement(CYBLE_ADVERTISING_FAST);
             ^
.\main.c:103:42: error: 'CYBLE_ADVERTISING_FAST' undeclared (first use in this function)
             CyBle_GappStartAdvertisement(CYBLE_ADVERTISING_FAST);
                                          ^
.\main.c: In function 'IasEventHandler':
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
.\main.c:136:17: error: 'CYBLE_EVT_IASS_WRITE_CHAR_CMD' undeclared (first use in this function)
     if(event == CYBLE_EVT_IASS_WRITE_CHAR_CMD)
                 ^
.\main.c:142:9: warning: implicit declaration of function 'CyBle_IassGetCharacteristicValue' [-Wimplicit-function-declaration]
         CyBle_IassGetCharacteristicValue(CYBLE_IAS_ALERT_LEVEL, sizeof(alertLevel), &alertLevel);
         ^
.\main.c:142:42: error: 'CYBLE_IAS_ALERT_LEVEL' undeclared (first use in this function)
         CyBle_IassGetCharacteristicValue(CYBLE_IAS_ALERT_LEVEL, sizeof(alertLevel), &alertLevel);
                                          ^
--------------- Build Failed: 05/27/2016 21:37:53 ---------------
